Layout color change, login script fix

--- a/css/screen.css
+++ b/css/screen.css
@@ -71,7 +71,7 @@ iframe {
 #login{
     width: 400px;
     margin: auto;
-    background-color: #373737;
+    background-color: #EEEEEE;
     border-radius: 10px;
     margin-top: 200px;
     -webkit-box-shadow: 0 0 12px 	rgba(0,0,0,0.7) /*{b-active-background-color}*/;
