--- a/css/screen.css
+++ b/css/screen.css
@@ -88,3 +88,8 @@ iframe {
     }
 }
 
+@media only screen and (min-width: 800px){
+    .ui-panel-closed {  width: 17em !important; }
+    .ui-panel-content-wrap.ui-body-c.ui-panel-animate.ui-panel-content-wrap-closed{ margin-left:17em; }
+}
+
